--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
+    <!-- "header and video section" -->
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4" alt="Excursion video">
+        </video>
+
+        <!-- "Supporting info section" -->
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="./resources/images/camp.jpg" alt="Camping image">
+
+    <!-- "Download section" -->
+     <h2>Coming Soon for iPhone and Android</h2>
+     <p><a href="#">Download Excursion (Coming soon!)</a></p>
+
+    <!-- "footer" -->
+     <footer class="footer">
+        <p>&copy; Excursion</p>
+     </footer>
 </body>
 </html>
