--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- "Supporting info section" -->
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="./resources/images/camp.jpg" alt="Camping image">
+    <p><img src="./resources/images/camp.jpg" alt="Camping image"></p> <!-- "Camping image" centerr-aligned -->>
 
     <!-- "Download section" -->
      <h2>Coming Soon for iPhone and Android</h2>
