--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><img src="./resources/images/camp.jpg" alt="Camping image"></p> <!-- "Camping image" centerr-aligned -->>
 
     <!-- "Download section" -->
+     <p><img src="./resources/images/phone.png" alt="Phone icon"></p> <!-- "Phone icon" center-aligned -->
      <h2>Coming Soon for iPhone and Android</h2>
      <p><a href="#">Download Excursion (Coming soon!)</a></p>
 
